2003-08-03  Martin Willemoes Hansen <mwh@sysrq.dk>

	* /en/Gnome/ClientState.xml:
	* /en/Gnome/FileDomain.xml:
	* /en/Gnome/HelpError.xml:
	* /en/Gnome/PreferencesType.xml:
	* /en/Gnome/TriggerType.xml:
	* /en/Gnome/URLError.xml: documented

2003-08-02  Martin Willemoes Hansen <mwh@sysrq.dk>

	* /en/Gnome/UIPixmapType.xml:
	* /en/Gnome/UIInfoConfigurableTypes.xml:
	* /en/Gnome/IconListMode.xml:
	* /en/Gnome/FontPickerMode.xml:
	* /en/Gnome/DateEditFlags.xml:
	* /en/Gnome/ClientFlags.xml:
	* /en/Gnome/DialogType.xml:
	* /en/Gnome/EdgePosition.xml: 
	* /en/Gnome/InteractStyle.xml:
	* /en/Gnome/RestartStyle.xml: 
	* /en/Gnome/SaveStyle.xml: 
	* /en/Gnome/UIInfoType.xml: documented

2003-08-01  Martin Willemoes Hansen <mwh@sysrq.dk>

	* /en/Gtk/MessageDialog.xml: Fixed remark.

2003-08-01  John Luke  <jluke@cfl.rr.com>

	* en/*.xml: use C#-style names, ex Gdk instead of GDK
	* en/Gtk/TreeView.xml: add some info
	* en/Gtk/MessageDialog.xml: clean up

2003-07-31  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/TreeIter.xml: documented except Zero, Copy, and Free
	* en/Gtk/TreeViewColumn.xml: documented	
	
2003-07-30  Duncan Mak  <duncan@ximian.com>

	* en/Gdk/EventNoExpose.xml: 
	* en/Gdk/EventButton.xml: Added hyperlinks.

2003-07-30  Duncan Mak  <duncan@ximian.com>	

	* en/Gnome/CanvasWidget.xml: 
	* en/Gnome/CanvasRect.xml: 
	* en/Gnome/CanvasRE.xml: 
	* en/Gnome/CanvasPolygon.xml:
	* en/Gnome/CanvasPixbuf.xml: 
	* en/Gnome/CanvasLine.xml:
	* en/Gnome/CanvasItem.xml:
	* en/Gnome/CanvasGroup.xml:
	* en/Gnome/CanvasEllipse.xml:
	* en/Gnome/CanvasClipgroup.xml:
	* en/Gnome/CanvasBpath.xml:
	* en/Gnome/Canvas.xml: fully documented.
	
2003-07-29  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/Label.xml: Finished documentation for the Gtk.Label
	class.

2003-07-28  Duncan Mak  <duncan@ximian.com>

	* en/Glade/XML.xml: Added some documentation.

2003-07-27  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/CheckButton.xml: add small example, update
	* en/Gtk/Combo.xml: add example, update
	