@@ -7,8 +7,24 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>
+    Used when the <see cref="T:Gnome.Client" /> wishes to interact with the user at 
+    the session manager's convenience (usually during shutdown and restarts).
+    </summary>
+    <remarks>
+    <para>
+    All other <see cref="T:Gnome.Client" />s are blocked from interacting with the user until the 
+    key is released via a call to <see cref="M:Gnome.Global.InteractionKeyReturn(int,bool)" />.
+    </para>
+    <para>
+    Although the function is not obliged to respect the passed in <see cref="T:Gnome.DialogType" />, 
+    it is bad form not to do so.
+    </para>
+    <para>client :      The <see cref="T:Gnome.Client" /> instance doing the interaction.</para>
+    <para>key :         A unique key.</para>
+    <para>dialog_type : The <see cref="T:Gnome.DialogType" /> that should be used to do the interaction.</para>
+    <para>data :        Application specific data that was specified at the time the callback was set up.</para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
