@@ -7,8 +7,7 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Called to perform any class specific setup that is required by each module.</summary>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
