@@ -7,8 +7,14 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>
+    Called to perform some initialization in a module 
+    (which could be either the main init function or the pre or post argument parsing phase).
+    </summary>
+    <remarks>
+    <para>program : The <see cref="T:Gnome.Program" /> instance which is being initialized.</para>
+    <para>mod_info : The current module's <see cref="T:Gnome.ModuleInfo" /> structure.</para> 
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
