@@ -7,8 +7,12 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Called to allow a module to do any pre-initialization it might need to do 
+    prior to having arguments parsed by the controlling parent module </summary>
+    <remarks>
+    <para>The parent module will do the argument parsing for all modules in the hierarchy.</para>
+    <para>mod_info : The current module's <see cref="T:Gnome.ModuleInfo" /> structure.</para>
+   </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
