@@ -7,8 +7,18 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>
+    Can be used as a target for <see cref="T:Gnome.TriggerType" /> 
+    of <see cref="T:Gnome.Trigger" /> instances.
+    </summary>
+    <remarks>
+    <para>
+    msg : The human-readable message that was passed to 
+    <see cref="M:Gnome.Triggers.Vdo(string,string,string[])" />. May be null.
+    </para>
+    <para>level : The severity level of the event. May be null. </para>
+    <para>supinfo : The section in which the event belongs. </para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
