@@ -7,8 +7,19 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Are called as a result of signals being emitted from a menu or tool bar item</summary>
+    <remarks>
+    <para>
+    Delegates of this type are given as the first element of a 
+    <see cref="T:Gnome.UIBuilderData" /> instance.
+    </para>
+    <para>uiinfo : The user data that was part of the <see cref="T:Gnome.UIInfo" /> instance.</para>
+    <para>signal_name : The name of the emitted signal.</para>
+    <para>
+    uibdata : The user data that was part of the relevant 
+    <see cref="T:Gnome.UIBuilderData" /> instance.
+    </para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
