@@ -1,3 +1,11 @@
+2003-08-04  Martin Willemoes Hansen <mwh@sysrq.dk>
+	* /en/Gnome/InteractFunction.xml:
+	* /en/Gnome/ModuleClassInitHook.xml:
+	* /en/Gnome/ModuleHook.xml:
+	* /en/Gnome/ModuleInitHook.xml:
+	* /en/Gnome/TriggerActionFunction.xml:
+	* /en/Gnome/UISignalConnectFunc.xml: documented
+
 2003-08-03  Martin Willemoes Hansen <mwh@sysrq.dk>
 
 	* /en/Gnome/ClientState.xml:
